--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:tRUXXjhR++pMpvZ91yoiFuahsnj10tgippNxv5//x4Y=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
@@ -19,12 +19,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=letzfarm.c3y0u8o6iiq5.us-east-1.rds.amazonaws.com
+DB_PORT=3306
+DB_DATABASE=letzfarm
+DB_USERNAME=forge
+DB_PASSWORD=7J?Kt?kV2%#nSgv
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
