--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-APP_NAME=Laravel
-APP_ENV=local
+APP_NAME=Letzfarm
+APP_ENV=production
 APP_KEY=base64:tRUXXjhR++pMpvZ91yoiFuahsnj10tgippNxv5//x4Y=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=http://ec2-54-209-163-71.compute-1.amazonaws.com/
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -14,7 +14,7 @@ APP_MAINTENANCE_STORE=database
 
 BCRYPT_ROUNDS=12
 
-LOG_CHANNEL=stack
+LOG_CHANNEL=daily
 LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
@@ -24,7 +24,7 @@ DB_HOST=letzfarm.c3y0u8o6iiq5.us-east-1.rds.amazonaws.com
 DB_PORT=3306
 DB_DATABASE=letzfarm
 DB_USERNAME=forge
-DB_PASSWORD=7J?Kt?kV2%#nSgv
+DB_PASSWORD=AQfAfXnDUba0fC8dKaOQ
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
