--- a/.env.example
+++ b/.env.example
@@ -19,12 +19,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=letzfarm.c3y0u8o6iiq5.us-east-1.rds.amazonaws.com
-DB_PORT=3306
-DB_DATABASE=letzfarm
-DB_USERNAME=forge
-DB_PASSWORD=AQfAfXnDUba0fC8dKaOQ
+DB_CONNECTION=sqlite
+#DB_HOST=letzfarm.c3y0u8o6iiq5.us-east-1.rds.amazonaws.com
+#DB_PORT=3306
+#DB_DATABASE=letzfarm
+#DB_USERNAME=forge
+#DB_PASSWORD=AQfAfXnDUba0fC8dKaOQ
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
